fix navbar item spacing

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -46,7 +46,6 @@
   justify-content: center;
   list-style: none;
   text-align: center;
-  justify-content: end;
 }
 
 .nav-item {
