--- a/src/componentsBW/Navbar/Navbar.css
+++ b/src/componentsBW/Navbar/Navbar.css
@@ -33,11 +33,9 @@
   list-style: none;
   text-align: center;
   width: 100vw;
-  justify-content: end;
-  /*margin-right: 2rem;*/
 }
 
-.nav-links a{
+.nav-links a {
   font-family: helvetica, sans-serif;
   color: black;
   text-decoration: none;
@@ -82,8 +80,6 @@
 
   .nav-links {
     text-align: left;
-    padding-bottom: 30px;
-    padding-top: 30px;
     width: 100%;
     display: table;
   }
